<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="es.uniovi.eii.contacttracker.viewmodels.NotifyPositiveViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.notifypositive.NotifyPositiveFragment">

        <!-- Párrafos explicativos -->
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:text="@string/notifyExplanation1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:text="@string/notifyExplanation2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1"/>

        <CheckBox
            android:id="@+id/checkBoxAddPersonalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:checked="false"
            android:text="@string/addPersonalData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:justificationMode="inter_word"
            android:text="@string/notifyExplanation3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxAddPersonalData"/>

        <!-- Botón para ver la política de privacidad -->
        <com.google.android.material.chip.Chip
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacyPolicy"
            android:layout_marginStart="20dp"
            app:chipIcon="@drawable/ic_privacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <!-- Separador -->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnPrivacyPolicy" />

        <!-- Indicador del Periodo de Infectividad -->
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.02">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:justificationMode="inter_word"
                android:text="@string/notifyExplanation4" />

            <TextView
                android:id="@+id/txtInfectivityPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text=""
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@android:color/holo_red_dark"
                app:visibility="@{!viewModel.loadingInfectivity}" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingInfectivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                app:indeterminateAnimationType="disjoint"
                app:indicatorColor="@android:color/holo_red_dark"
                app:visibility="@{viewModel.loadingInfectivity}" />
        </LinearLayout>

        <!-- Botón para notificar el Positivo -->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNotifyPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@{viewModel.isLoading ? @color/disabledOrange : @color/orange}"
                android:enabled="@{!viewModel.isLoading}"
                android:text="@string/btnNotifyPositive"
                android:textColor="@color/orangeText" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/notifyPositiveProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="visible"
                app:indeterminateAnimationType="disjoint"
                app:indicatorColor="@color/teal_700"
                app:visibility="@{viewModel.isLoading}" />

            <TextView
                android:id="@+id/notifyPositiveLoadingPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadingPlaceholderNotifyPositive"
                android:visibility="gone"
                app:visibility="@{viewModel.isLoading}" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>