...

    <!-- Preferences: Notificaciones de positivos -->
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>
...
    <string name="minIntervalHint">Intervalo de tiempo</string>
    <string name="minDisplacementHint">Desplazamiento mínimo</string>
    <string name="minIntervalNumberPickerTitle">Seleccionar intervalo mínimo</string>
    <string name="contentDescriptionDeleteLocationsByDate">Eliminar localizaciones por fecha</string>

    <!-- Fragment para Notificar POSITIVOS -->
    <string name="notifyAPositive">Notificar un positivo</string>
    <string name="genericErrorNotifyPositive">Ha habido un error al notificar el positivo. No ha sido posible subir las localizaciones a la nube.</string>
    <string name="notifyExplanation1">Registra que has dado positivo en la aplicación para que tus localizaciones registradas en los últimos días se suban a la nube.</string>
    <string name="notifyExplanation2">Opcionalmente puedes adjuntar tus datos personales, los cuales quedarán asociados a tus localizaciones. De este modo, contribuyes a facilitar las tareas de rastreo realizadas por el personal sanitario.</string>
    <string name="notifyExplanation3">Tus datos personales están protegidos de acuerdo con nuestra política de privacidad.</string>
    <string name="notifyExplanation4">Se subirán a la nube todas tus localizaciones registradas en los últimos:</string>
    <string name="btnNotifyPositive">He dado positivo</string>
    <string name="addPersonalData">Adjuntar mis datos personales</string>
    <string name="loadingPlaceholderNotifyPositive">Subiendo tus localizaciones a la nube...</string>
    <string name="notifyPositiveResultText">Se han subido %d localizaciones a la nube.</string>
    <string name="errorNotifyLimitExceeded">Se ha superado el límite de notificación. No podrás notificar más positivos hasta pasados %d días.</string>
    <string name="errorNotifyNoLocations">No se ha podido notificar el positivo: no existen localizaciones registradas en el periodo de infectividad. Activa el servicio de rastreo para registrar localizaciones.</string>
    <string name="seePrivacyPolicy">Consulta nuestra</string>

...
    <string name="consentRationale">De acuerdo con lo establecido en la normativa vigente
        sobre protección de datos de la LOPD/GDD de 2018 necesitamos tu consentimiento
        voluntario para llevar a cabo el tratamiento de dichos datos personales de forma lícita.</string>

    <string name="privacyPolicyAgreement">Al aceptar, estás confirmando que tienes más de 14 años y que estás de acuerdo
    con el tratamiento de los datos personales aportados y con nuestra Política de Privacidad.</string>
    <string name="privacyPolicy">Política de Privacidad</string>
    <string name="agree">Sí, estoy de acuerdo</string>
    <string name="cancelAgree">No, gracias</string>

    <!-- Fragment: Resultados de la Comprobación de Contactos de Riesgo -->
    <string name="riskPercentPlaceholder">0%</string>
    <string name="txtCheckHour">Hora de la comprobación</string>
...
    <string name="fcm_subscribe_success">Cliente Android suscrito al Topic [%s]</string>
    <string name="fcm_subscribe_fail">Error al suscribirse al Topic [%s]</string>
    <string name="fcm_unsubscribe_success">Cliente Android desuscrito del Topic [%s]</string>
    <string name="fcm_unsubscribe_fail">Error al desuscribirse del Topic [%s]</string>

    <!-- Política de Privacidad -->
    <string name="appOwner">Dueño de la aplicación</string>
    <string name="appOwnerText">El dueño y responsable de la aplicación Contact Tracker es Alejandro Flórez Muñiz, en el cual reside total responsabilidad sobre el tratamiento de los datos de los interesados.El dueño y responsable de la aplicación Contact Tracker es Alejandro Flórez Muñiz, en el cual reside total responsabilidad sobre el tratamiento de los datos de los interesados.</string>
    <string name="treatmentResponsable">Responsable del tratamiento</string>
    <string name="treatmentResponsableText">El tratamiento de los datos es responsabilidad del dueño de la aplicación, Alejandro Flórez Muñiz, por lo que no se deriva el tratamiento de los datos a entidades de terceros. Datos de contacto del responsable:</string>
    <string name="treatmentResponsableItem1">•	Nombre y apellidos: Alejandro Flórez Muñiz.</string>
    <string name="treatmentResponsableItem2">•	Correo electrónico: alexflorezmuniz@gmail.com</string>
    <string name="treatmentResponsableItem3">•	Teléfono móvil: 695 82 28 79</string>
...
