...

    <item
        android:id="@+id/tracker"
        android:title="@string/bottom_menu_item_1"
        android:icon="@drawable/ic_location_tracker"/>
    <item
        android:id="@+id/notifyPositive"
        android:title="@string/bottom_menu_item_2"
        android:icon="@drawable/ic_pcr"/>
    <item
        android:id="@+id/riskContacts"
        android:title="@string/bottom_menu_item_3"
        android:icon="@drawable/ic_riskcontacts"/>
...
